--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -338,7 +338,6 @@
     "howShouldReplacementAttorneysStepInDetail": "<p class=\"govuk-body\">Welsh.</p><p class=\"govuk-body\">Welsh</p><p class=\"govuk-body\">Welsh.</p><p class=\"govuk-body\">Welsh.</p>",
     "whenOneCanNoLongerAct": "Welsh <span class=\"govuk-!-font-weight-bold\">welsh</span> welsh",
     "whenNoneCanNoLongerAct": "Welsh <span class=\"govuk-!-font-weight-bold\">welsh</span> welsh",
-    "other": "Welsh",
-    "otherHint": "<p class=\"govuk--body\">Welsh.<a class=\"govuk-link\" href=\"#\">Welsh?</a></p>"
-
+    "otherWay": "Welsh",
+    "otherWayHint": "<p class=\"govuk--body\">Welsh.<a class=\"govuk-link\" href=\"#\">Welsh?</a></p>"
 }
