--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -150,6 +150,7 @@
     "yes": "Welsh",
     "no": "Welsh",
     "selectWantReplacementAttorneys": "Welsh",
+    "replacementAttorneys": "Welsh",
 
     "whenCanTheLpaBeUsed": "Welsh",
     "youCanDecideHeader": "<p class=\"govuk-body-l\">You can decide whether you want your attorney to be able to use the LPA as soon as it's registered or only once you've lost mental capacity.</p>",
