add missing trans keys

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -360,5 +360,10 @@
     "whenOneCanNoLongerAct": "Welsh <span class=\"govuk-!-font-weight-bold\">welsh</span> welsh",
     "whenNoneCanNoLongerAct": "Welsh <span class=\"govuk-!-font-weight-bold\">welsh</span> welsh",
     "otherWay": "Welsh",
-    "otherWayHint": "<p class=\"govuk--body\">Welsh.<a class=\"govuk-link\" href=\"#\">Welsh?</a></p>"
+    "otherWayHint": "<p class=\"govuk--body\">Welsh.<a class=\"govuk-link\" href=\"#\">Welsh?</a></p>",
+
+    "jointly-and-severally": "Welsh",
+    "mixed":                 "Welsh",
+    "when-registered":       "Welsh",
+    "when-capacity-lost":    "Welsh"
 }
