update banner for UR testing

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -7,6 +7,7 @@
     "skipToMainContent": "Skip to main content",
     "menu": "Menu",
     "newServiceContent": "This is a new service – your <a class=\"govuk-link\" href=\"#\">feedback</a> will help us to improve it.",
+    "urModeContent": "This is a prototype – this is not a real service.",
     "supportLinks": "Support links",
     "help": "Help",
     "cookies": "Cookies",
