--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -42,7 +42,7 @@
     "enterDateOfBirth": "Enter date of birth",
     "dateOfBirthMustBeReal": "Date of birth must be a real date",
     "dateOfBirthIsFuture": "Date of birth must be before today",
-    "dateOfBirthIsUnder18": "The donor is under 18. I understand that the donor must be at least 18 on the date they sign the LPA, otherwise the LPA will be rejected.",
+    "dateOfBirthIsUnder18": "You are under 18. I understand that I must be at least 18 on the date I sign the LPA, otherwise the LPA will be rejected.",
     "dateOfBirthIsOver100": "By saving this section, you confirm that the person is more than 100 years old. If not, please change the date.",
 
     "homeAddress": "Home address",
@@ -100,7 +100,7 @@
     "cannotStartYet": "Cannot start yet",
     "notStarted": "Not started",
     "fillInTheLpa": "Fill in the LPA",
-    "provideDonorDetails": "Provide the donor's details",
+    "provideYourDetails": "Provide your details",
     "chooseYourContactPreferences": "Choose your contact preferences",
     "chooseYourAttorneys": "Choose your attorneys",
     "chooseYourReplacementAttorneys": "Choose your replacement attorneys (optional)",
@@ -305,15 +305,15 @@
     "viewTheLpaProgress": "View the LPA progress",
 
     "howShouldAttorneysMakeDecisions": "How should the attorneys make decisions?",
-    "howShouldAttorneysMakeDecisionsDetail": "The donor's choice here is very important as it affects how their LPA can be used. Whichever option the donor chooses, the attorneys must always act in the donor's best interests.",
+    "howShouldAttorneysMakeDecisionsDetail": "Your choice here is very important as it affects how your LPA can be used. Whichever option you choose, your attorneys must always act in your best interests.",
     "getHelpMakingDecision": "Get help with making this decision",
     "jointlyAndSeverally": "Jointly and severally",
     "jointlyAndSeverallyHintAttorneys": "Attorneys can make decisions on their own or together. Most people choose this option because it's the most practical.",
     "jointly": "Jointly",
-    "jointlyHintAttorneys": "Attorneys must agree unanimously on every decision, however big or small. Be careful - if one of the attorneys can no longer act, none of the other attorneys will be able to act either, unless the donor states otherwise in their instructions.",
+    "jointlyHintAttorneys": "Attorneys must agree unanimously on every decision, however big or small. Be careful - if one of the attorneys can no longer act, none of the other attorneys will be able to act either, unless you state otherwise in your instructions.",
     "jointlyAndSeverallyMixed": "Jointly for some decisions, and jointly and severally for other decisions",
-    "jointlyAndSeverallyMixedHintAttorneys": "Attorneys must agree unanimously on some decisions, but can make others on their own. The donor must state which decisions need to be agreed unanimously.",
-    "decisionDetailsHint": "Please tell us which decisions the donor wants to be made jointly. These decisions will be printed on a extra sheet that the donor will need to sign and date. Take a look at the guidance for examples of how the donor can make their wishes clear.",
+    "jointlyAndSeverallyMixedHintAttorneys": "Attorneys must agree unanimously on some decisions, but can make others on their own. You must state which decisions need to be agreed unanimously.",
+    "decisionDetailsHint": "Please tell us which decisions you want to be made jointly. Take a look at the guidance for examples of how you can make your wishes clear.",
     "details": "Details",
     "chooseADecisionType": "Select from the listed decision options",
     "provideDecisionDetails": "Provide details on how your attorneys should act",
@@ -321,9 +321,9 @@
 
     "warning": "Warning",
     "jointlyReplacementWarning": "Replacement attorneys are an important backup when attorneys are appointed to act jointly.",
-    "jointlyReplacementWarningContent": "<p class=\"govuk-body\">If the donor does not appoint any replacement attorneys and one of the original attorneys dies or can no longer act, the LPA will stop working.</p><p class=\"govuk-body\">If the donor does appoint replacement attorneys and one of the original attorneys dies or can no longer act:</p><ul class=\"govuk-list govuk-list--bullet\"><li>ALL the original attorneys will be replaced by the replacement attorneys, unless the donor states otherwise in their instructions</li><li>the original attorneys will not be able to make any decisions on the donor's behalf anymore</li></ul>",
-    "mixedReplacementWarning": "The donor appointed their attorneys to act jointly for some decisions, and jointly and severally for others.",
-    "mixedReplacementWarningContent": "<p class=\"govuk-body\">This means that if an original attorney dies or can no longer act:</p><ul class=\"govuk-list govuk-list--bullet\"><li>all the replacement attorneys step in and take over making the joint decisions</li><li>the remaining original attorneys will not be able to make the joint decisions anymore, unless the donor states otherwise in their instructions</li><li>the replacement and remaining original attorneys can make all other decisions together or individually</li></ul>",
+    "jointlyReplacementWarningContent": "<p class=\"govuk-body\">If you do not appoint any replacement attorneys and one of the original attorneys dies or can no longer act, the LPA will stop working.</p><p class=\"govuk-body\">If you appoint replacement attorneys and one of the original attorneys dies or can no longer act:</p><ul class=\"govuk-list govuk-list--bullet\"><li>ALL the original attorneys will be replaced by the replacement attorneys, unless you state otherwise in your instructions</li><li>the original attorneys will not be able to make any decisions on your behalf anymore</li></ul>",
+    "mixedReplacementWarning": "You appointed your attorneys to act jointly for some decisions, and jointly and severally for others.",
+    "mixedReplacementWarningContent": "<p class=\"govuk-body\">This means that if an original attorney dies or can no longer act:</p><ul class=\"govuk-list govuk-list--bullet\"><li>all the replacement attorneys step in and take over making the joint decisions</li><li>the remaining original attorneys will not be able to make the joint decisions anymore, unless you state otherwise in your instructions</li><li>the replacement and remaining original attorneys can make all other decisions together or individually</li></ul>",
 
     "whoWouldYouLikeToBeTheReplacementAttorneys": "Who would you like to be the replacement attorneys?",
     "doYouWantToAddAnotherReplacementAttorney": "Do you want to add another replacement attorney?",
@@ -334,17 +334,17 @@
     },
 
     "howShouldReplacementAttorneysMakeDecisions": "How should the replacement attorneys make decisions?",
-    "howShouldReplacementAttorneysMakeDecisionsDetail": "The donor's choice here is very important as it affects how their LPA can be used. Whichever option the donor chooses, their replacement attorneys must always act in the donor's best interests.",
+    "howShouldReplacementAttorneysMakeDecisionsDetail": "Your choice here is very important as it affects how your LPA can be used. Whichever option you choose, your replacement attorneys must always act in your best interests.",
     "jointlyAndSeverallyHintReplacementAttorneys": "Replacement attorneys can make decisions on their own or together. Most people choose this option because it's the most practical.",
-    "jointlyHintReplacementAttorneys": "Replacement attorneys must agree unanimously on every decision, however big or small. If one replacement attorney can no longer act, the others will not be able to act either, unless the donor states otherwise in their instructions.",
-    "jointlyAndSeverallyMixedHintReplacementAttorneys": "Replacement attorneys must agree unanimously on some decisions, but can make others on their own. The donor must state which decisions need to be agreed unanimously.",
+    "jointlyHintReplacementAttorneys": "Replacement attorneys must agree unanimously on every decision, however big or small. If one replacement attorney can no longer act, the others will not be able to act either, unless you states otherwise in your instructions.",
+    "jointlyAndSeverallyMixedHintReplacementAttorneys": "Replacement attorneys must agree unanimously on some decisions, but can make others on their own. You must state which decisions need to be agreed unanimously.",
 
     "howShouldReplacementAttorneysStepIn": "How should the replacement attorneys step in?",
-    "howShouldReplacementAttorneysStepInDetail": "<p class=\"govuk-body\">The donor can choose when their replacement attorneys step in and in what order.</p><p class=\"govuk-body\">Once they've stepped in, the replacement attorneys will be able to make any decision jointly and severally along with the remaining original attorneys.</p><p class=\"govuk-body\">Most donors choose for all the replacement attorneys to step in together as soon as 1 of the original attorneys can no longer act.</p><p class=\"govuk-body\">If the donor would prefer the replacement attorneys to step in later or in a specific order, select 1 of the other 2 options.</p>",
+    "howShouldReplacementAttorneysStepInDetail": "<p class=\"govuk-body\">You can choose when your replacement attorneys step in and in what order.</p><p class=\"govuk-body\">Once they've stepped in, the replacement attorneys will be able to make any decision jointly and severally along with the remaining original attorneys.</p><p class=\"govuk-body\">Most donors choose for all the replacement attorneys to step in together as soon as 1 of the original attorneys can no longer act.</p><p class=\"govuk-body\">If you would prefer the replacement attorneys to step in later or in a specific order, select 1 of the other 2 options.</p>",
     "whenOneCanNoLongerAct": "As soon as <span class=\"govuk-!-font-weight-bold\">one</span> of the original attorneys can no longer act, all the replacement attorneys should step in together",
     "whenNoneCanNoLongerAct": "When <span class=\"govuk-!-font-weight-bold\">none</span> of the original attorneys can act, all the replacement attorneys should step in together",
     "otherWay": "In some other way",
-    "otherWayHint": "<p class=\"govuk--body\">Describe below how the donor would like this to happen. Be careful - the more specific the instructions, the greater the chance that they will not be able to be followed. If in doubt, seek legal advice. <a class=\"govuk-link\" href=\"#\">Not sure what to put?</a></p>",
+    "otherWayHint": "<p class=\"govuk--body\">Describe below how you would like this to happen. Be careful - the more specific the instructions, the greater the chance that they will not be able to be followed. If in doubt, seek legal advice. <a class=\"govuk-link\" href=\"#\">Not sure what to put?</a></p>",
     "selectWhenToStepIn": "Select when your replacement attorneys should step in",
     "provideDetailsOfWhenToStepIn": "Provide details on how your replacement attorneys should step in",
 
